# booted-server

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  HOMOGRAPHY_API.md  IMPLEMENTATION_SUMMARY.md  README.md  clouddeploy.sh  config.yaml  detection_fixture_20251209_142811.json  detection_fixture_20251209_142823.json  detection_fixture_20251209_142944.json  detection_fixture_20251209_144319.json  detection_fixture_20251209_151423.json  download_output.txt  main.py  pyproject.toml  test_grouped_render.py  train.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/tire-boot/: Security_Tire_Claw_Boot_blender_base.blend  Security_Tire_Claw_Boot_claw_only.blend  Security_Tire_Claw_Boot_claw_only.blend1  Security_Tire_Claw_Boot_max_convert.mtl
schemas/: detection.py
services/models/: detector.py
services/rendering/: __init__.py  blender_renderer.py
services/rendering/blender_scripts/: __init__.py  render_tire_boot.py
services/train/: README.md  download_from_roboflow.py  test_roboflow_connection.py  train_street_wheels.py  upload_to_roboflow.py
services/utils/: __init__.py  camera_calibration.py  ellipse_detection.py  geometry.py  visualization.py
spec/: DETECTION_SCHEMA.md  test_geometry.py
spec/fixtures/: all_detections.json  five_detection.json  four_detection.json  one_detection.json  seven_detection.json  six_detection.json  storybook_fixture.json  three_detection.json  threejs_fixture.json  two_detection.json
tests/: BASELINE_RESULTS.md  TEST_SPEC.md  test_detector.py  test_homography.py
types/: detection.ts
